<resources>
    <string name="app_name">SuperCartApp</string>
    <string name="login_text">LOGIN</string>
    <string name="email_id_text">Email Id</string>
    <string name="tv_password_text">Password</string>
    <string name="forgot_password_text">FORGOT PASSWORD</string>
    <string name="text_register_user">I DONT HAVE AN ACCOUNT</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_mobile_number">Mobile No.</string>
    <string name="text_email_id">Email Id</string>
    <string name="text_register">REGISTER</string>
    <string name="text_existing_account">I HAVE AN ACCOUNT</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_re_enter_password">Re-Enter Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_enter_your_email_id">Enter your Email Id</string>
    <string name="text_continue">CONTINUE</string>
    <string name="text_home">Home</string>
    <string name="text_cart">Cart</string>
    <string name="text_profile">Profile</string>
    <string name="text_orders">Orders</string>
    <string name="text_log_out">Logout</string>
    <string name="text_menu">Menu</string>
    <string name="text_search">Search</string>
    <string name="text_welcome">Welcome User</string>
    <string name="text_user_email">User Email Id</string>
    <string name="text_user_phone">User Phone No.</string>
    <string name="text_search_hint">Search for any Product</string>
    <string name="text_dummy_category_name">Smart Phones</string>
    <string name="text_product_description">product description</string>
    <string name="text_product_price">$0</string>
    <string name="text_product_add_to_cart">ADD TO CART</string>
    <string name="text_product_cart_count">1</string>
    <string name="text_product_name">Product Name</string>
    <string name="text_specification">Specifications</string>
    <string name="text_specs_label">Specs Label</string>
    <string name="text_specs_description">Specs Description</string>
    <string name="text_reviews_header">User Reviews</string>
    <string name="text_review_title">Review Title</string>
    <string name="text_review_description">Review Description</string>
    <string name="text_empty_reviews">No User Reviews Yet…</string>
    <string name="text_empty_specification">Error in Fetching Specifications</string>
    <string name="tv_cart_total">Total Bill Amount</string>
    <string name="text_unit_price">Unit Price</string>
    <string name="text_checkout">CHECKOUT</string>
    <string name="text_cart_empty_message">Cart Message</string>
    <string name="text_login_message">Login Message</string>
    <string name="text_registeration_message">Registeration Message</string>
    <string name="text_total_bill_amount">Total Bill Amount</string>
    <string name="text_quantity_label">Quantity</string>
    <string name="text_quantity">0</string>
    <string name="text_amount_label">Amount</string>
    <string name="text_select_delivery_address">Select Delivery Address</string>
    <string name="text_add_address">ADD ADDRESS</string>
    <string name="text_next">NEXT</string>
    <string name="text_no_delivery_address">No delivery address found</string>
    <string name="text_select_payment_option">Select Payment Option</string>
    <string name="text_cash_on_delivery">Cash On Delivery</string>
    <string name="text_internet_banking">Internet Banking</string>
    <string name="text_debit_credit_card">Debit Card / Credit Card</string>
    <string name="text_paypal">Pay Pal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_cart_items">Cart Items</string>
    <string name="text_delivery_address">Delivery Address</string>
    <string name="text_payment_option_label">Payment Option</string>
    <string name="text_confirm_order"><![CDATA[CONFIRM & PLACE ORDER]]></string>
    <string name="text_add_new_address">Add New Address</string>
    <string name="text_address_title">Address Title</string>
    <string name="text_address">Address</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_save">SAVE</string>
    <string name="text_enter_address_title">Please enter address title</string>
    <string name="text_enter_address">Please enter address</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment">Payment</string>
    <string name="text_summary">Summary</string>
    <string name="text_order_id_label">Order Id</string>
    <string name="text_order_status_label">Order Status</string>
    <string name="text_order_id_value">#0</string>
    <string name="text_order_status_value">placed</string>
    <string name="order_id">Order #1</string>
    <string name="text_order_date">2022–01–16 23:45:34</string>
    <string name="text_order_list_head">My Orders</string>
    <string name="text_empty_orders">No orders found</string>
    <string name="order_date_label">Order Date</string>
    <string name="purchase_items_label">Purchase Items</string>
    <string name="text_total_bill_amount_label">Total Bill Amount</string>
    <string name="text_order_details_message">Unable to load order details</string>
</resources>