<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin"
    android:padding="@dimen/layout_padding"
    android:background="@drawable/checkout_item_border">

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textSize="@dimen/header3_size"
        android:textColor="@color/content_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_status_value"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/text_address_title"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintTop_toBottomOf="@id/tv_order_id"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_tv_top_margin"
        android:text="@string/text_delivery_address"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_secondary"
        app:layout_constraintTop_toBottomOf="@id/tv_address_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_payment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/text_payment_option_label"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_payment"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_primary"
        app:layout_constraintTop_toTopOf="@id/tv_payment_label"
        app:layout_constraintStart_toEndOf="@id/tv_payment_label"
        android:layout_marginStart="@dimen/tv_tv_top_margin"/>

    <TextView
        android:id="@+id/tv_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/tv_cart_total"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_order_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_product_price"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_primary"
        app:layout_constraintTop_toTopOf="@id/tv_total_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/text_order_date"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintTop_toBottomOf="@id/tv_total_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>