<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    tools:context=".view.order.OrderDetailsFragment">

    <TextView
        android:id="@+id/tv_order_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_id_label"
        android:textSize="@dimen/text_size_head"
        android:textColor="@color/content_tertiary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_id_value"
        android:textSize="@dimen/text_size_head"
        android:textColor="@color/content_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_order_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/text_order_status_label"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintTop_toBottomOf="@id/tv_order_id_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_status_value"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/primary"
        app:layout_constraintTop_toTopOf="@id/tv_order_status_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_order_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_tv_top_margin"
        android:text="@string/order_date_label"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintTop_toBottomOf="@id/tv_order_status_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_date"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_secondary"
        app:layout_constraintTop_toTopOf="@id/tv_order_date_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_purchase_items_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/purchase_items_label"
        android:textSize="@dimen/header3_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintTop_toBottomOf="@id/tv_order_date_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_item_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/content_top_margin"
        tools:listitem="@layout/order_details_item"
        tools:itemCount="2"
        app:layout_constraintTop_toBottomOf="@id/tv_purchase_items_head"
        app:layout_constraintBottom_toTopOf="@id/tv_total_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_total_bill_amount_label"
        android:textSize="@dimen/header3_size"
        android:textColor="@color/content_secondary"
        app:layout_constraintBottom_toTopOf="@id/tv_delivery_address_head"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_total_bill_amount"
        android:textSize="@dimen/header3_size"
        android:textColor="@color/content_primary"
        app:layout_constraintTop_toTopOf="@id/tv_total_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_delivery_address_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/text_delivery_address"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintBottom_toTopOf="@id/cl_delivery_address"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_delivery_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_tv_top_margin"
        android:padding="@dimen/layout_padding"
        android:background="@drawable/checkout_item_border"
        app:layout_constraintBottom_toTopOf="@id/tv_payment_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_address_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_address_title"
            android:textSize="@dimen/header4_size"
            android:textColor="@color/content_tertiary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_tv_top_margin"
            android:text="@string/text_delivery_address"
            android:textSize="@dimen/header4_size"
            android:textColor="@color/content_secondary"
            app:layout_constraintTop_toBottomOf="@id/tv_address_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_payment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/text_payment_option_label"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_payment"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_primary"
        app:layout_constraintTop_toTopOf="@id/tv_payment_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_order_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/text_order_details_message"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_secondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/pb_order_details_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>