<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/content_primary"
        android:textSize="@dimen/text_size_head"
        android:layout_marginTop="12dp"
        android:text="@string/text_welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header4_size"
        android:layout_marginTop="@dimen/tv_tv_top_margin"
        android:text="@string/text_user_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header4_size"
        android:layout_marginTop="@dimen/tv_tv_top_margin"
        android:text="@string/text_user_phone"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_divider_height"
        android:layout_marginTop="@dimen/tv_tv_top_margin"
        android:background="@color/content_secondary"/>

</LinearLayout>