<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.checkout.ordersummary.OrderSummaryFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cart_items_head"
        android:textColor="@color/content_tertiary"
        android:text="@string/text_cart_items"
        android:textSize="@dimen/header3_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_cart_item_list"
        android:layout_marginTop="@dimen/content_top_margin"
        tools:listitem="@layout/final_cart_item"
        tools:itemCount="2"
        app:layout_constraintTop_toBottomOf="@id/tv_cart_items_head"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_total_head"
        android:text="@string/text_total_bill_amount"
        android:textSize="@dimen/header3_size"
        android:textColor="@color/content_secondary"
        app:layout_constraintTop_toBottomOf="@id/rv_cart_item_list"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cart_total_amount"
        android:text="@string/text_product_price"
        android:textSize="@dimen/header3_size"
        android:textColor="@color/content_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cart_item_list" />

    <TextView
        android:id="@+id/tv_delivery_address_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_delivery_address"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        android:layout_marginTop="@dimen/content_top_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_total_head"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl_delivery_address"
        android:layout_marginBottom="@dimen/card_margin"
        android:padding="@dimen/layout_padding"
        android:background="@drawable/checkout_item_border"
        android:layout_marginTop="@dimen/tv_tv_top_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_delivery_address_head">

        <TextView
            android:id="@+id/tv_address_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_home"
            android:textSize="@dimen/header4_size"
            android:textColor="@color/content_tertiary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_delivery_address"
            android:layout_marginTop="@dimen/tv_tv_top_margin"
            android:text="@string/text_address"
            android:textSize="@dimen/header4_size"
            android:textColor="@color/content_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_payment_option_label"
        android:text="@string/text_payment_option_label"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        android:layout_marginTop="@dimen/content_top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_delivery_address"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_payment_option"
        android:text="@string/text_cash_on_delivery"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        android:layout_marginTop="@dimen/content_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_delivery_address"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_confirm_order"
        android:textColor="@color/white"
        android:textSize="@dimen/header3_size"
        android:padding="@dimen/button_padding"
        android:background="@drawable/button_style"
        android:layout_margin="@dimen/content_top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_option_label" />
</androidx.constraintlayout.widget.ConstraintLayout>