<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_cart_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cart_items"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_delivery_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_delivery"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintStart_toEndOf="@id/tv_cart_step"
        app:layout_constraintEnd_toStartOf="@id/tv_payment_step"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_payment_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_payment"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintStart_toEndOf="@id/tv_delivery_step"
        app:layout_constraintEnd_toStartOf="@id/tv_summary_step"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_summary_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_summary"
        android:textSize="@dimen/header4_size"
        android:textColor="@color/content_tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider_height"
        android:layout_marginTop="@dimen/tv_tv_top_margin"
        android:background="@color/content_tertiary"
        app:layout_constraintTop_toBottomOf="@id/tv_cart_step"/>

</androidx.constraintlayout.widget.ConstraintLayout>